Wed Mar 20 09:37:11 GMT 2002  Eirik Fuller <eirik@hackrat.com>

	* src/check_mandirs.c (splitline): Don't create a copy of base_name
	  as pointer_name.
	  (test_manfile): Be more careful about pointer reuse across calls
	  to splitline().

Mon Feb 11 13:01:07 GMT 2002  Michael Piefel  <piefel@debian.org>

	* po/de.po: Corrections and updates; convert to UTF-8.
	* man/THANKS: Add credit (the contributor of the previous de.po is
	  unidentified).

Sun Jan 27 03:31:11 GMT 2002  Colin Watson  <cjwatson@debian.org>

	* configure.in (ALL_LINGUAS): Add da. Reorder alphabetically.

Sat Jan 12 17:55:12 GMT 2002  Colin Watson  <cjwatson@debian.org>

	* src/lexgrog.l: Match a line at a time rather than a character at a
	  time after the end of the NAME section.

	* src/check_mandirs.c (testmandirs): More --debug information.

	* include/manconfig.h.in (LESS_OPTS): Prune duplicate -Pm option.
	  Set -PM too so it works even when $LESS contains -M.
	* src/man.c (make_display_command): Substitute prompt_string into
	  LESS_OPTS twice to accommodate the above.

Mon Jan  7 16:16:02 GMT 2002  Colin Watson  <cjwatson@debian.org>

	* src/lexgrog.l: Another {blank_eol} fix, thanks to Peter Clay.

Sun Jan  6 19:05:46 GMT 2002  Colin Watson  <cjwatson@debian.org>

	* src/lexgrog.l: Use {blank_eol}, not [blank_eol]. The latter
	  matches in entirely inappropriate places.

Sun Dec 23 06:17:47 GMT 2001  Colin Watson  <cjwatson@debian.org>

	* src/man.c (long_options, usage, man_getopt): Add a new
	  -E/--encoding option. It behaves a little like -T, except that it
	  uses nroff instead of troff and outputs to a pager.
	  (make_roff_command): Only call determine_lang_table() if
	  roff_device isn't already set.
	  (display, try_section, display_filesystem, display_database):
	  Check for different_encoding.
	* man/man1/man.man1 (DEFAULTS, OPTIONS): Document -E.

Sun Dec 23 05:23:05 GMT 2001  Colin Watson  <cjwatson@debian.org>
